Email address update.

--- a/AUTHORS
+++ b/AUTHORS
@@ -848,7 +848,7 @@ Martijn van Oosterhout <kleptog@svana.org>
 Martin Honermeyer <maze@strahlungsfrei.de>
 Martin Kelly <martin@surround.io>
 Martin Mosegaard Amdisen <martin.amdisen@praqma.com>
-Martin Redmond <martin@tinychat.com>
+Martin Redmond <redmond.martin@gmail.com>
 Mary Anthony <mary.anthony@docker.com>
 Masahito Zembutsu <zembutsu@users.noreply.github.com>
 Mason Malone <mason.malone@gmail.com>
